# kavachxv2

./: CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  render.yaml
backend/: .env.example  kavachx_thresholds.json  requirements.txt
backend/app/: main.py
backend/app/api/: auth.py  dashboard.py  dpdp_moderator.py  governance.py  proxy.py  settings.py  ws.py
backend/app/core/: auth.py  config.py  startup_checks.py
backend/app/models/: orm_models.py  schemas.py
backend/app/modules/: ownership_detector.py  policy_engine.py  risk_scorer.py  safety_scanner.py  safety_training_data.py
backend/app/modules/dpdp_moderator/: __init__.py  dataset.py  gold_eval.py  inference.py  pipeline.py  requirements.txt  retrain.py  train.py
backend/app/modules/dpdp_moderator/model_output/: adapter_config.json  adapter_model.safetensors  label_map.json  (+1 more)
backend/app/modules/general_safety/: __init__.py  dataset.py  gold_eval.py  gold_eval_results.txt  inference.py  train.py
backend/app/services/: consent_service.py  governance_service.py  synthetic_media_service.py  websocket_manager.py
backend/extension/: background.js  content.js  interceptor.js  manifest.json  popup.html
docs/: architecture.md  setup_guide.md
frontend/src/: index.css
frontend/src/components/shared/: Sidebar.jsx
frontend/src/pages/: AlertsPage.jsx  AuditPage.jsx  ComplianceDashboard.jsx  EngineerDashboard.jsx  LoginPage.jsx  PlaygroundPage.jsx  PoliciesPage.jsx  SettingsPage.jsx
frontend/src/utils/: helpers.js
nginx/: nginx.conf
sdk/: pyproject.toml
sdk/kavachx_dpdp/: __init__.py  client.py
(+4 files in other folders)
