[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "kavachx-dpdp"
version = "1.0.0"
description = "Python SDK for the KavachX DPDP AI Moderator API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
keywords = ["dpdp", "ai-governance", "moderation", "kavachx", "bascg"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
async = ["httpx[asyncio]>=0.25.0"]
dev   = ["pytest>=7.0", "pytest-asyncio>=0.23", "respx>=0.20"]

[project.urls]
Homepage    = "https://kavachx.yourdomain.in"
Repository  = "https://github.com/your-org/kavachx"
"Bug Tracker" = "https://github.com/your-org/kavachx/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["kavachx_dpdp*"]
